bugs and text fixes

--- a/app/index.html
+++ b/app/index.html
@@ -174,7 +174,7 @@
                 <li>
                   Verbinden Sie den Speedport Router mit der Telefondose.
                   Stecken Sie dazu das DSL-Kabel
-                  für den IP basierten Anschluss (grauer Stecker)
+                  für den IP-basierten Anschluss (grauer Stecker)
                   in die Telefondose (mittlere Buchse) und den
                   Speedport Router (graue Buchse: "DSL").
                 </li>
@@ -200,7 +200,7 @@
                   eine kabellose Verbindung (WLAN) herstellen.
                   <br>
                   Nähere Informationen dazu erhalten Sie in Ihren
-                  einrichtungsunterlagen.
+                  Einrichtungsunterlagen.
                 </li>
                 <li>
                   Schließen Sie das Netzteil an den Speedport Router 
@@ -231,13 +231,13 @@
                   dieses ganz einfach mit der integrierten Funkbasis 
                   des Speedport Routers verbinden.
                   Nähere Informationen finden Sie in der 
-                  Bedienungsanleitung des Speedphones.
+                  Einrichtungsunterlage des Speedphones.
                 </li>
                 <li>
                   Um Ihren IP-basierten Anschluss nutzen zu können, 
                   müssen Sie Ihren Speedport Router entsprechend
                   konfigurieren. Folgen Sie dazu den Anweisungen der
-                  Bedienungsanleitung Ihres Speedport Routers.
+                  Einrichtungsunterlage Ihres Speedport Routers.
                 </li>
                 
               </ol>  
@@ -289,7 +289,7 @@
             <div class="copy copyf copy-internet-kabel">
               <p>
                 <strong>Wichtig:</strong> 
-                Schließen Sie Ihren Media Receiver erst an, wenn eine Internetverbindung bestehet.
+                Schließen Sie Ihren Media Receiver erst an, wenn eine Internetverbindung besteht.
               </p>
               <ol type="a">
                 <li>
@@ -302,7 +302,7 @@
             <!-- copy: INTERNET LAN //-->
             <div class="copy copyf copy-internet-lan">
               <p>
-                Mit unserem Service <a href="http://telekom.de" target="_blank">Installation Heimnetz</a> verlegt unser Service Techniker Kabel und LAN-Dosen nach Ihren Wünschen.
+                Mit unserem Service <a href="http://www.telekom.de/privatkunden/zuhause/zubuchoptionen/service-optionen/montage-und-installation/installation-heimnetz-premium" target="_blank">Installation Heimnetz</a> verlegt unser Service Techniker Kabel und LAN-Dosen nach Ihren Wünschen.
                 <br/><br/>
                 <strong>Wichtig:</strong> 
                 Schließen Sie Ihren Media Receiver erst an, wenn eine Internetverbindung besteht.
@@ -362,7 +362,7 @@
             <!-- copy: SATELLIT LAN //-->
             <div class="copy copyf copy-satellit-lan">
               <p>
-                Mit unserem Service <a href="http://telekom.de" target="_blank">Installation Heimnetz</a> verlegt unser Service Techniker Kabel und LAN-Dosen nach Ihren Wünschen.
+                Mit unserem Service <a href="http://www.telekom.de/privatkunden/zuhause/zubuchoptionen/service-optionen/montage-und-installation/installation-heimnetz-premium" target="_blank">Installation Heimnetz</a> verlegt unser Service Techniker Kabel und LAN-Dosen nach Ihren Wünschen.
                 <br>
                 <br>
                 <strong>Wichtig:</strong> 
@@ -451,16 +451,11 @@
             <div class="copy copyf copy-internet-kabel copy-internet-lan copy-internet-powerline">
               <ol type="a">
                 <li>
-                  Verbinden Sie den Media Receiver mit
-                  Ihrem Fernseher. Wenn Ihr Fernseher HD
-                  unterstützt, stecken Sie das HDML-Kabel in den
-                  Media Receiver und Ihren Fernseher.
-                  Unterstützt Ihr Fernseher kein HD, nutzen Sie
-                  das SCART-Kabel.
+                  Verbinden Sie den Media Receiver mit Ihrem Fernseher. Stecken Sie dazu das HDMI-Kabel in den Media Receiver und Ihren Fernseher.
                 </li>
                 <li>
-                  Schließen Sie das Netzkabel an den Media 
-                  Receiver und an eine Steckdose an.
+                  Schließen Sie das Netzkabel an den
+                  Media Receiver und an eine Steckdose an.
                 </li>
               </ol>  
 
